@@ -769,6 +769,8 @@ static SEXP applyClosure_v (SEXP call, SEXP op, SEXP arglist, SEXP rho,
 	a = CDR(a);
     }
 
+    setNoSpecSymFlag (newrho);
+
     /*  Fix up any extras that were supplied by usemethod. */
 
     if (suppliedenv != R_NilValue) {
